--- a/app.css
+++ b/app.css
@@ -1,3 +1,4 @@
 body {
     color: black;
+    background-image: url(https://images.pexels.com/photos/7108779/pexels-photo-7108779.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
 }
